Fixed styling on login page for the logo and alignment

--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -1,10 +1,20 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 div {
     display: inline-block;
     vertical-align: middle;
+    width: auto;
 }
 
 img {
     display: inline-block;
     vertical-align: middle;
     padding: 5px
+}
+
+Main {
+    width: 100vw;
 }
